# src/API/authentication/authService.ts
@@ -150,6 +150,7 @@ async function userSignIn(body:any){
         error: "Bad Request",
       });
     }
+    if(isPasswordValid && invalidAttempts < 3){
     //if password matches generating jwt token
     const token = jwt.sign(
       { userId: user._id, email: body.email },
@@ -161,6 +162,15 @@ async function userSignIn(body:any){
     invalidAttempts = 0;
     //sending token in response
     return token;
+    }else{
+      return Promise.reject({
+        statusCode: 400,
+        status: false,
+        data: {},
+        message: "Crossed invalid attempts limit",
+      });
+    }
+
   } catch (error) {
     return Promise.reject({
       statusCode: 500,
@@ -172,4 +182,118 @@ async function userSignIn(body:any){
   }
 }
 
-export default {userSignup,verifyEmail,userSignIn}
+async function forgotPassword(body:any){
+  try {
+    const {email} = body;
+    const user = await authModel.findOne({email});
+    if(!user){
+      return Promise.reject({
+        statusCode: 500,
+        status: false,
+        data: {},
+        message: "User not found",
+      });
+    }
+    const token = Math.random().toString(36).substr(2);
+    emailVerificationTokens[email] = token;
+    const verificationLink = `http://localhost:8001/app/verifyResetPassword/${token}`;
+    var mailOptions = {
+      from:'mounika.m@tynybay.io',
+      to:'mounika.musham11@gmail.com',
+      subject:'Reset password- Mounika Musham',
+     html: `<p>click the below link to verify your email <a href='${verificationLink}'>verify</a></p>`
+  }
+  transport.sendMail(mailOptions,async function(error,info){
+    if(error){
+        console.log('nodemailer error',error)
+    }else{
+      const user = await authModel.updateOne({email},{$set:{isEmailVerifiedForForgotPassword: false}});
+        console.log('Email sent'+ info.response);
+    }
+  })
+  return true
+  } catch (error) {
+    return Promise.reject({
+      statusCode: 500,
+      status: false,
+      data: {},
+      message: "Bad Request",
+      error: error,
+    });
+  }
+}
+
+async function verifyResetPassword(requestedToken:any){
+  const token = requestedToken;
+  const email = Object.keys(emailVerificationTokens).find(
+    (key) => emailVerificationTokens[key] === token
+  );
+  if(email){
+    delete emailVerificationTokens[email];
+    try {
+      const user = await authModel.findOneAndUpdate({email},{isEmailVerifiedForForgotPassword: true});
+      if(!user){
+        return Promise.reject({
+          statusCode: 400,
+          status: false,
+          data: {},
+          message: "user not found",
+        });
+      }
+      return Promise.resolve({
+        statusCode: 400,
+        status: false,
+        data: {},
+        message: "email verified successfully",
+      });
+      
+    } catch (error) {
+      console.error(error)
+      return Promise.reject({
+        statusCode: 400,
+        status: false,
+        data: {},
+        message:error,
+      });
+    }
+  
+  }else{
+    return Promise.reject({
+      statusCode: 400,
+      status: false,
+      data: {},
+      message:'Invalid or Token expired',
+    });
+  }
+  }
+
+  async function createNewPassword(body:any){
+    try {
+        const { email, newPassword } = body;
+        const salt = await bcrypt.genSalt(10);
+        // Update the user's password in the database (you should hash newPassword before saving it)
+        const hashedPassword = await bcrypt.hash(newPassword, salt);
+    
+        const user = await authModel.findOneAndUpdate({ email }, { password: hashedPassword });
+    
+        if (!user) {
+          return Promise.reject({
+            statusCode: 400,
+            status: false,
+            data: {},
+            message:'user not found',
+          });
+        }
+    
+       return user
+    } catch (error) {
+      return Promise.reject({
+        statusCode: 400,
+        status: false,
+        data: {},
+        message:'Invalid or Token expired',
+      });
+    }
+  }
+
+export default {userSignup,verifyEmail,userSignIn,forgotPassword,verifyResetPassword,createNewPassword}
